# runningtourism

./: .env  .env-prod  .gitignore  README.md  docker-compose.yaml  pyproject.toml  reqiremments.txt
app/running/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
app/running/migrations/: 0001_initial.py  0002_alter_foto_image.py  0003_feedback_alter_event_event_album_and_more.py  0004_alter_event_options_alter_feedback_options_and_more.py  0005_alter_event_event_album_alter_event_event_date1_and_more.py  0006_alter_event_event_route.py
app/running/static/css/: Main3d.css  fedback.css  filter.css
app/running/static/js/: Main3d.js  events.js
app/running/templates/: base.html
app/running/templates/includes/: feedback.html  filter.html
app/running/templates/running/: contacts.html  event_detail.html  events.html  feedback_page.html  main.html  politics.html
mixins/: __init__.py  str_mixin.py
settings/: env_config.py  settings.py  urls.py
